--- a/css/style3.css
+++ b/css/style3.css
@@ -1,2 +1,2 @@
-@import url(reset.css);@import url(style.css);@import url(style2.css);@import url(style3.css);@import url(style4.css);@import url(fonts.css);
+@import url(reset.css);@import url(style.css);@import url(style2.css);@import url(style3.css);@import url(style4.css);@import url(fonts.css);#map{height:700px;width:100%;margin-bottom:100px}
 /*# sourceMappingURL=style3.css.map */
