--- a/css/style3.scss
+++ b/css/style3.scss
@@ -5,6 +5,12 @@
 @import "style4.css";
 @import "fonts.css";
 
+#map {
+    height: 700px;
+    width: 100%;
+    margin-bottom: 100px;
+}
+
 
 @media only screen and (min-width : 320px) {
 }
