--- a/css/style3.css
+++ b/css/style3.css
@@ -1,2 +1,2 @@
-@import url(reset.css);@import url(style.css);@import url(style2.css);@import url(style3.css);@import url(style4.css);@import url(fonts.css);#map{height:700px;width:100%;margin-bottom:100px}
+@import url(reset.css);@import url(style.css);@import url(style2.css);@import url(style3.css);@import url(style4.css);@import url(fonts.css);#map{width:100%;height:554px}.welcome{color:#383838;font-family:Lato;font-weight:800;text-transform:uppercase;font-size:34px;line-height:26px;text-align:center}.address{color:#383838;font-family:Lato;font-weight:800;text-transform:uppercase;font-size:24px;line-height:50px;text-align:center}
 /*# sourceMappingURL=style3.css.map */
