--- a/css/style3.scss
+++ b/css/style3.scss
@@ -6,11 +6,32 @@
 @import "fonts.css";
 
 #map {
-    height: 700px;
     width: 100%;
-    margin-bottom: 100px;
+    height: 554px;
 }
 
+.welcome {
+
+	color: #383838;
+	font-family: Lato;
+	font-weight: 800;
+	text-transform: uppercase;
+
+	font-size: 34px;
+	line-height: 26px;
+	text-align: center;
+}
+
+.address {
+	color: #383838;
+	font-family: Lato;
+	font-weight: 800;
+	text-transform: uppercase;
+
+	font-size: 24px;
+	line-height: 50px;
+	text-align: center;	
+}
 
 @media only screen and (min-width : 320px) {
 }
