--- a/css/style3.scss
+++ b/css/style3.scss
@@ -10,6 +10,8 @@
     height: 554px;
     margin-left: 10%;
     margin-right: 10%;
+    margin-top: 0 auto;
+    padding-top: 0 auto;
 }
 
 .welcome {
@@ -22,10 +24,6 @@
 
 	font-size: 34px;
 	line-height: 26px;
-
-    @font-face {
-        src: url(fonts/pompadur.ttf); /* Путь к файлу со шрифтом */
-    }
 }
 
 .address {
@@ -38,6 +36,8 @@
 
 	font-size: 24px;
 	line-height: 50px;
+	margin-bottom: 0 auto;
+	padding-bottom: 0 auto;
 }
 
 @media only screen and (min-width : 320px) {
