--- a/css/style5.scss
+++ b/css/style5.scss
@@ -1,3 +1,93 @@
+.clear{
+	clear: both;
+}
+
+//===napravlenia
+.my-container{
+	max-width: 1180px;
+	width: 100%;
+}
+.df-napravlenia{
+	text-align: center;
+	margin: 0 auto;
+	h3{
+		font-size: 34px;
+		color:#383838;
+		text-transform: uppercase;
+		text-align: center;		
+	}
+	.df-img{
+		width: 220px;
+		height: 350px;
+		position: relative;
+		margin:0 15px 20px 0;
+		display: inline-block;
+		outline: 1px solid green;
+		.df-img-box{
+			text-align: center;	
+			margin: 0 auto;
+			img{
+				width: 100%;
+				height: 100%;
+			}
+			span{
+				display:block;
+				position: absolute;
+				vertical-align: middle;
+				outline: 1px solid red;
+				bottom: 0;
+				left: 50%;
+				transform:translate(-50%, 0);
+				font-size: 22px;
+				color:#fff;				
+				text-transform: uppercase;	
+				padding-bottom: 25px;
+				width: 100%;		
+			}				
+		}
+		.df-link{
+			color:#383838;
+			font-size: 14px;
+			background: #fde841;
+			text-transform: uppercase;
+			padding: 5px 8px;
+			display:none;
+			border-radius: 10px;		
+			position: absolute;
+			top:30%;
+			text-align: center;
+			margin: 0 auto;
+			// left: 0;	
+		}
+		.df-text{
+			position: absolute;
+			bottom: 0px;
+			width: 100%;
+			text-align: center;			
+			height: 115px;
+			background: #1b88db;
+			opacity: 0.5;
+			transition:all 0.7s;
+			-moz-transition:all 0.7s;
+		}
+		
+
+	}
+	.df-img:last-child{
+		margin-right: 0px;
+	}
+	.df-img:hover{		
+		.df-text{		
+		    height: 100%;
+		    transition:all 0.7s;
+		    -moz-transition:all 0.7s;
+		}
+		
+	}
+}
+
+
+
 
 @media only screen and (min-width : 320px) {
 }
