--- a/css/style5.scss
+++ b/css/style5.scss
@@ -4,8 +4,10 @@
 
 //===napravlenia
 .my-container{
-	max-width: 1180px;
+	max-width: 1190px !important;
 	width: 100%;
+	outline: 1px solid blue;
+	margin: 0 auto;
 }
 .df-napravlenia{
 	text-align: center;
@@ -14,50 +16,63 @@
 		font-size: 34px;
 		color:#383838;
 		text-transform: uppercase;
-		text-align: center;		
+		text-align: center;	
+		margin: 25px 0 25px 0;	
 	}
 	.df-img{
-		width: 220px;
-		height: 350px;
-		position: relative;
-		margin:0 15px 20px 0;
 		display: inline-block;
-		outline: 1px solid green;
+		width: 220px;
+		height: 349px;
+		position: relative;
+		margin:0 15px 20px 0;	
+			
 		.df-img-box{
 			text-align: center;	
 			margin: 0 auto;
+			vertical-align: middle;
+			
 			img{
 				width: 100%;
 				height: 100%;
 			}
-			span{
-				display:block;
-				position: absolute;
-				vertical-align: middle;
-				outline: 1px solid red;
+			div{				
+				vertical-align: middle;	
+				margin: 0 auto;		
+				position: absolute;						
 				bottom: 0;
 				left: 50%;
 				transform:translate(-50%, 0);
 				font-size: 22px;
 				color:#fff;				
 				text-transform: uppercase;	
-				padding-bottom: 25px;
-				width: 100%;		
-			}				
+				padding: 15px 0;
+				width: 100%;
+				height: 115px;
+				z-index: 100;
+				display: table;
+				span{
+					display: table-cell;
+					vertical-align: middle;
+				}								
+			}
+						
 		}
 		.df-link{
 			color:#383838;
 			font-size: 14px;
 			background: #fde841;
 			text-transform: uppercase;
-			padding: 5px 8px;
+			padding: 5px 5px;
+			width: 195px;
 			display:none;
 			border-radius: 10px;		
 			position: absolute;
-			top:30%;
+			top: 41%;
+			left: 50%;
+			transform:translate(-50%, -59%);
 			text-align: center;
 			margin: 0 auto;
-			// left: 0;	
+			z-index: 100;
 		}
 		.df-text{
 			position: absolute;
@@ -70,22 +85,19 @@
 			transition:all 0.7s;
 			-moz-transition:all 0.7s;
 		}
-		
-
-	}
-	.df-img:last-child{
-		margin-right: 0px;
-	}
-	.df-img:hover{		
+	}	
+	.df-img:hover{
+			
 		.df-text{		
 		    height: 100%;
 		    transition:all 0.7s;
 		    -moz-transition:all 0.7s;
+		     transition-delay: 0.2s;
+			 -moz-transition-delay: 0.2s;	
 		}
 		
 	}
 }
-
 
 
 
@@ -99,9 +111,25 @@
 }
 
 @media only screen and (min-width : 992px) {
+
 }
 
 @media only screen and (min-width : 1248px) {
+		.df-napravlenia{	
+		h3{		
+			margin: 40px 0 60px 0;	
+		}
+		.df-img{		
+			margin:0 15px 20px 0;			
+		}
+		.df-mr0{
+			margin-right: 0px;
+		}	
+		.df-margin{
+			margin:  0 70px 0 70px;
+		}
+		
+	}
 }
 
 .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
