--- a/css/style4.scss
+++ b/css/style4.scss
@@ -7,28 +7,93 @@
 
 .dd-header-wrap{
 	width: 100%;
-	// opacity: 0.1;
 	background:url(../img/headbg.jpg) no-repeat top center;
 	background-size:cover;
 	height: 300px; 
 	.dd-menu-wrap{
-		// opacity: 0.1;
-		// background: #fff;
-		background: black;
+		background: rgba(#fff, 0.1);
 		.dd-menu-container{
 			max-width: 1178px;
 			margin: 0 auto;
-			ul{
+			.dd-nav{
+				display: table;
 				li{
-					display: inline-block;
+					display: table-cell;
+					vertical-align: middle;
+					text-align: center;
 					a{
+						position: relative;
 						display: inline-block;
 						font-family: "MuseoSansCyrl1";
-						color:black;
 						font-size: 16px;
 						color:#fff;
-						opacity: 1;
-						z-index: 9999;
+						padding: 20px 45px;
+						transition: all 0.7s;
+						-moz-transition: all 0.7s;
+						// outline: 1px solid red;
+					}
+					a:before{
+						background: url(../img/border.jpg) no-repeat;
+						position:absolute;
+						content:"";
+						width: 1px;
+						height: 49px;
+						left: 0;
+						top: 0;
+					}
+					a:hover{
+						background: rgba(#fff, 0.2);
+						color:#FDE841;
+					}
+					a:active{
+						background: rgba(#fff, 0.35);
+						color:#FFCC00;
+					}
+				}
+				li:nth-child(2){
+					a{
+						padding: 20px 24px;
+					}
+				}
+				li:nth-child(3){
+					a{
+						padding: 20px 14px;
+					}
+				}
+				li:nth-child(4){
+					a{
+						padding: 20px 14px;
+					}
+				}
+				li:nth-child(5){
+					a{
+						padding: 20px 32px;
+					}
+				}
+				li:nth-child(6){
+					
+					a{
+						padding: 10px 25px;
+					}
+				}
+				li:nth-child(7){
+					a{
+						padding: 20px 44px;
+					}
+				}
+				li:nth-child(8){
+					a{
+						padding: 20px 35px;
+						position:relative;
+					}
+					a:after{
+						background: url(../img/border.jpg) no-repeat;
+						position:absolute;
+						content:"";
+						width: 1px;
+						height: 49px;
+						right: 0;
+						top: 0;
 					}
 				}
 			}
@@ -36,22 +101,225 @@
 	}
 }
 
-@media only screen and (min-width : 320px) {
+/* Мобильное меню
+=============================*/
+
+#check_1{
+	display: block;
+	outline: 1px solid red;
+}
+.anz-perspective{
+	-webkit-perspective: 500px; 
+	perspective: 500px;
+	z-index: 999999999;
+
+}
+.menu-list-pressed{
+
+}
+#check_1:checked ~ .anz-perspective{
+	transition: all 1s ease-in-out;
+	left: 0px;
+}
+#check_1 ~ .anz-perspective{
+	transition: all 1s ease-in-out;
+	left: -310px;
 }
 
-@media only screen and (min-width : 480px) {
+#check_1:checked ~ .anz-perspective .menu-list-pressed{
+	transition: all 1s ease-in-out;
+	transform: rotateY(0deg);
+}
+#check_1 ~ .anz-perspective .menu-list-pressed{
+	transition: all 1s ease-in-out;
+	transform: rotateY(100deg);
 }
 
-@media only screen and (min-width : 768px) {
+#check_1 ~ .anz-menu-ch .fa-bars{
+	display: block;
+}
+#check_1 ~ .anz-menu-ch .fa-times{
+	display: none;
+}
+#check_1:checked ~ .anz-menu-ch .fa-bars{
+	display: none;
+}
+#check_1:checked ~ .anz-menu-ch .fa-times{
+	display: block;
+}
+.menu-list-pressed {
+    //position: fixed;
+    //padding: 40px 50px;
+    
+}
+.anz-menu{
+    //cursor: pointer;
+    //font-size: 28px;
 }
 
-@media only screen and (min-width : 992px) {
+.anz-menu-ch{
+	outline:1px solid red;
+	width: 20px;
+	height: 20px;
+	color: #fec524;   
+	cursor: pointer; 
+	position: absolute;
+	right: 20px;
+	top: 25px;
+	font-size: 21px;
+	z-index: 3;
+	display: block;
+}
+/*menu*/
+/*menu style*/
+.anz-perspective{
+	position: fixed;
+	width: 250px;
+	height: 100%;
+	top: 0px;
 }
 
-@media only screen and (min-width : 1248px) {
+.menu-list-pressed {
+    //position: fixed;
+    width: 250px;
+    height: 100%;
+    top: 0px;
+    z-index: 1000;
+    color: #fff;
+    background: #009FE3;//#ffd4a5;
+    border: 1px solid #828089;
+    box-shadow: 0px 0px 5px #828089;
+    background: #009FE3;
+
+   // border: 1px solid #828089;
+    //box-shadow: 0px 0px 5px #828089;
 }
 
-.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+
+.anz-mobile{
+	display: block;
+}
+
+
+
+
+#check_1{
+	display: none;
+}
+.anz-perspective{
+	-webkit-perspective: 500px; 
+	perspective: 500px;
+
+}
+.menu-list-pressed{
+
+}
+#check_1:checked ~ .anz-perspective{
+	transition: all 1s ease-in-out;
+	left: 0px;
+}
+#check_1 ~ .anz-perspective{
+	transition: all 1s ease-in-out;
+	left: -310px;
+}
+
+#check_1:checked ~ .anz-perspective .menu-list-pressed{
+	transition: all 1s ease-in-out;
+	transform: rotateY(0deg);
+}
+#check_1 ~ .anz-perspective .menu-list-pressed{
+	transition: all 1s ease-in-out;
+	transform: rotateY(100deg);
+}
+
+#check_1 ~ .anz-menu-ch .fa-bars{
+	display: block;
+}
+#check_1 ~ .anz-menu-ch .fa-times{
+	display: none;
+}
+#check_1:checked ~ .anz-menu-ch .fa-bars{
+	display: none;
+}
+#check_1:checked ~ .anz-menu-ch .fa-times{
+	display: block;
+}
+
+
+.anz-menu-ch{
+	color: #fff; 
+	outline:1px solid red;
+	width: 20px;
+	height: 20px;  
+	cursor: pointer; 
+	position: absolute;
+	right: 20px;
+	top: 25px;
+	font-size: 30px;
+	z-index: 3;
+	display: block;
+}
+.anz-perspective{
+	position: fixed;
+	width: 250px;
+	height: 100%;
+	top: 0px;
+        //background: red;
+        //background: #009FE3;
+    }
+    .menu-list-pressed {
+    	width: 250px;
+    	height: 100%;
+    	top: 0px;
+    	z-index: 1000;
+    	color: #fff;
+    	background: white;
+    	background: #009FE3;
+    }
+    .ab-main-menu{
+    	li{
+    		display: block;
+            //height: 55px;
+            //line-height: 55px;
+            a{
+            	display: block;
+               //color: $accent;
+                //line-height: 25px;
+            }
+            a:hover{
+            	animation: none !important;
+            	color: #fff;
+
+            }
+            a:hover:before, a:hover:after{
+            	content: "";
+            	animation: none;
+            }
+        }
+        li:hover{
+
+        }
+        .active{
+        	background: #6DB756;
+        }
+    }
+
+    @media only screen and (min-width : 320px) {
+    }
+
+    @media only screen and (min-width : 480px) {
+    }
+
+    @media only screen and (min-width : 768px) {
+    }
+
+    @media only screen and (min-width : 992px) {
+    }
+
+    @media only screen and (min-width : 1248px) {
+    }
+
+    .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     //outline: 5px solid red;
 }
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
