--- a/css/style3.scss
+++ b/css/style3.scss
@@ -6,7 +6,7 @@
 @import "fonts.css";
 
 #map {
-    width: 1170px;
+    width: 100%;
     height: 554px;
     margin-left: 10%;
     margin-right: 10%;
@@ -72,6 +72,10 @@
 
 	.schedule_table {
         margin: 10% auto;
+	}
+
+	.cyan {
+		background-color: #00d2d4;
 	}
 }
 
