--- a/css/fonts.css
+++ b/css/fonts.css
@@ -5,3 +5,9 @@
   font-weight: normal;
   font-style: normal; }
 
+@font-face {
+  font-family: "lato-heavy";
+  src: url("../fonts/lato-heavy/lato-heavy.eot");
+  src: local("☺"), url("../fonts/lato-heavy/lato-heavy.woff") format("woff"), url("../fonts/lato-heavy/lato-heavy.ttf") format("truetype"), url("../fonts/lato-heavy/lato-heavy.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
