--- a/css/style5.scss
+++ b/css/style5.scss
@@ -12,12 +12,14 @@
 .df-napravlenia{
 	text-align: center;
 	margin: 0 auto;
+	font-family: "lato-heavy";
 	h3{
 		font-size: 34px;
 		color:#383838;
 		text-transform: uppercase;
 		text-align: center;	
 		margin: 25px 0 25px 0;	
+		font-family: "lato-heavy";
 	}
 	.df-img{
 		display: inline-block;
@@ -99,7 +101,38 @@
 	}
 }
 
-
+/*=========two====*/
+.df-two00{
+	margin: 80px 0;
+	display: table;
+	div{
+		width: 302px;
+		height: 183px;
+		display: table-cell;
+		background-image: url("../img/df-bg-two.png");
+		background-position: center center;
+		background-repeat: no-repeat;
+		text-align: center;
+		vertical-align: middle;
+		color:#fff;
+		.df-t1{
+			font-size: 82px;
+			line-height: 24.89px;
+			display: block;
+			font-family: "lato-heavy";
+		}
+		.df-t2{
+			font-size: 49px;
+			line-height: 36px;
+			display: block;
+		}
+		.df-t3{
+			font-size: 21px;
+			line-height: 25px;
+			display: block;
+		}
+	}
+}
 
 @media only screen and (min-width : 320px) {
 }
