--- a/css/style3.scss
+++ b/css/style3.scss
@@ -77,6 +77,34 @@
 	.cyan {
 		background-color: #00d2d4;
 	}
+
+	.green {
+		background-color: #2cbd55;
+	}
+
+	.blue {
+        background-color: #2ba3fb;
+	}
+
+	.lilac {
+        background-color: #8d90fa;
+	}
+
+	.red {
+		background-color: #ec7424;
+	}
+
+	.orange {
+		background-color: #ff9d1e;
+	}
+
+	.light_green {
+		background-color: #40bd84;
+	}
+
+	.white_color {
+		color: white;
+	}
 }
 
 @media only screen and (min-width : 1248px) {
