--- a/css/style5.scss
+++ b/css/style5.scss
@@ -24,15 +24,14 @@
 	.df-img{
 		display: inline-block;
 		width: 220px;
-		height: 349px;
+		height: 350px;
 		position: relative;
-		margin:0 15px 20px 0;	
-			
+		margin:0 15px 20px 0;
+		overflow: hidden;				
 		.df-img-box{
 			text-align: center;	
 			margin: 0 auto;
-			vertical-align: middle;
-			
+			vertical-align: middle;			
 			img{
 				width: 100%;
 				height: 100%;
@@ -47,7 +46,7 @@
 				font-size: 22px;
 				color:#fff;				
 				text-transform: uppercase;	
-				padding: 15px 0;
+				// padding: 15px 0;
 				width: 100%;
 				height: 115px;
 				z-index: 100;
@@ -61,11 +60,13 @@
 		}
 		.df-link{
 			color:#383838;
+			font-family: "MuseoSansCyrl1";
+			font-weight: 500;
 			font-size: 14px;
 			background: #fde841;
 			text-transform: uppercase;
-			padding: 5px 5px;
-			width: 195px;
+			padding: 5px 3px;
+			width: 203px;
 			display:none;
 			border-radius: 10px;		
 			position: absolute;
@@ -82,8 +83,8 @@
 			width: 100%;
 			text-align: center;			
 			height: 115px;
-			background: #1b88db;
-			opacity: 0.5;
+			opacity: 0.89;
+			background-color: #108ce8;
 			transition:all 0.7s;
 			-moz-transition:all 0.7s;
 		}
@@ -130,6 +131,7 @@
 			font-size: 21px;
 			line-height: 25px;
 			display: block;
+			font-family: "lato-medium";
 		}
 	}
 }
