--- a/css/style2.scss
+++ b/css/style2.scss
@@ -14,24 +14,27 @@ font-family: Lato;
 		line-height: 17px;
 		color: #383838;
 		text-transform: uppercase;
-		max-width:725px;
+		max-width:1100px;
 		margin:0 auto;
 		outline:1px solid red;
 		.db-h-content{
 			outline:1px solid red;
 			padding-top:21px;
+			padding-bottom:65px;
 		}
 		.db-block-one{
 			outline:1px solid red;
-			margin:0 auto;
-			
 			padding:21px 0;
+			text-align: center;
+			.db-block-script{
+				
+			}
 		}
 		.db-block-two{
 			outline:1px solid red;
 			margin:0 auto;
-		
 			padding:21px 0;
+			
 		}
 	}
 }
@@ -48,7 +51,7 @@ font-family: Lato;
 
 	.db-all-content{
 	.db-all-content-block{
-		max-width:725px;
+		
 		margin:0 auto;
 		outline:1px solid red;
 		.db-h-content{
