--- a/css/fonts.css
+++ b/css/fonts.css
@@ -5,6 +5,27 @@
   font-weight: normal;
   font-style: normal; }
 
+  @font-face {
+  font-family: "MuseoSansCyrl300";
+  src: url("../fonts/MuseoSansCyrl300/MuseoSansCyrl_1.eot");
+  src: local("☺"), url("../fonts/MuseoSansCyrl300/MuseoSansCyrl_1.woff") format("woff"), url("../fonts/MuseoSansCyrl300/MuseoSansCyrl_1.ttf") format("truetype"), url("../fonts/MuseoSansCyrl300/MuseoSansCyrl_1.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+  @font-face {
+  font-family: "MuseoSansCyrl500";
+  src: url("../fonts/MuseoSansCyrl500/MuseoSansCyrl_2.eot");
+  src: local("☺"), url("../fonts/MuseoSansCyrl500/MuseoSansCyrl_2.woff") format("woff"), url("../fonts/MuseoSansCyrl500/MuseoSansCyrl_2.ttf") format("truetype"), url("../fonts/MuseoSansCyrl500/MuseoSansCyrl_2.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+  @font-face {
+  font-family: "MuseoSansCyrl900";
+  src: url("../fonts/MuseoSansCyrl900/MuseoSansCyrl_3.eot");
+  src: local("☺"), url("../fonts/MuseoSansCyrl900/MuseoSansCyrl_3.woff") format("woff"), url("../fonts/MuseoSansCyrl900/MuseoSansCyrl_3.ttf") format("truetype"), url("../fonts/MuseoSansCyrl900/MuseoSansCyrl_3.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
 @font-face {
   font-family: "lato-heavy";
   src: url("../fonts/lato-heavy/lato-heavy.eot");
