--- a/css/style4.scss
+++ b/css/style4.scss
@@ -5,6 +5,11 @@
 @import "style4.css";
 @import "fonts.css";
 
+/* Меню для декстопа
+=============================*/
+
+
+
 .dd-header-wrap{
 	width: 100%;
 	background:url(../img/headbg.jpg) no-repeat top center;
@@ -105,221 +110,132 @@
 =============================*/
 
 #check_1{
-	display: block;
-	outline: 1px solid red;
+	display: none;
+	position: fixed;
+	top: 25px;
+	right: 25px;
+	font-size: 50px; 
 }
 .anz-perspective{
+	position: fixed;
+	top: 0px;
+	height: 100%;
 	-webkit-perspective: 500px; 
 	perspective: 500px;
-	z-index: 999999999;
-
+	z-index: 150;
 }
-.menu-list-pressed{
 
-}
 #check_1:checked ~ .anz-perspective{
 	transition: all 1s ease-in-out;
-	left: 0px;
+	right: 0px;
 }
 #check_1 ~ .anz-perspective{
 	transition: all 1s ease-in-out;
-	left: -310px;
+	right: -330px;
 }
-
 #check_1:checked ~ .anz-perspective .menu-list-pressed{
 	transition: all 1s ease-in-out;
 	transform: rotateY(0deg);
 }
 #check_1 ~ .anz-perspective .menu-list-pressed{
 	transition: all 1s ease-in-out;
-	transform: rotateY(100deg);
+	transform: rotateY(90deg);
 }
-
-#check_1 ~ .anz-menu-ch .fa-bars{
-	display: block;
-}
-#check_1 ~ .anz-menu-ch .fa-times{
-	display: none;
-}
-#check_1:checked ~ .anz-menu-ch .fa-bars{
-	display: none;
-}
-#check_1:checked ~ .anz-menu-ch .fa-times{
-	display: block;
-}
-.menu-list-pressed {
-    //position: fixed;
-    //padding: 40px 50px;
-    
+.anz-menu-ch{
+	cursor: pointer;    
 }
 .anz-menu{
-    //cursor: pointer;
-    //font-size: 28px;
-}
-
-.anz-menu-ch{
-	outline:1px solid red;
-	width: 20px;
-	height: 20px;
-	color: #fec524;   
-	cursor: pointer; 
-	position: absolute;
-	right: 20px;
-	top: 25px;
-	font-size: 21px;
-	z-index: 3;
-	display: block;
-}
-/*menu*/
-/*menu style*/
-.anz-perspective{
-	position: fixed;
-	width: 250px;
-	height: 100%;
-	top: 0px;
-}
-
-.menu-list-pressed {
-    //position: fixed;
-    width: 250px;
-    height: 100%;
-    top: 0px;
-    z-index: 1000;
-    color: #fff;
-    background: #009FE3;//#ffd4a5;
-    border: 1px solid #828089;
-    box-shadow: 0px 0px 5px #828089;
-    background: #009FE3;
-
-   // border: 1px solid #828089;
-    //box-shadow: 0px 0px 5px #828089;
-}
-
-
-.anz-mobile{
-	display: block;
-}
-
-
-
-
-#check_1{
-	display: none;
-}
-.anz-perspective{
-	-webkit-perspective: 500px; 
-	perspective: 500px;
-
+	text-align: right;
+	height:48px;
+	background: rgba(#fff, 0.3);
+	.dd-mainmenu{
+		li{
+			a{
+				text-transform: uppercase;
+				font-family: "MuseoSansCyrl1";
+				font-size: 16px;
+				color:#fff;
+			}
+		}
+	}
 }
 .menu-list-pressed{
-
-}
-#check_1:checked ~ .anz-perspective{
-	transition: all 1s ease-in-out;
-	left: 0px;
-}
-#check_1 ~ .anz-perspective{
-	transition: all 1s ease-in-out;
-	left: -310px;
-}
-
-#check_1:checked ~ .anz-perspective .menu-list-pressed{
-	transition: all 1s ease-in-out;
-	transform: rotateY(0deg);
-}
-#check_1 ~ .anz-perspective .menu-list-pressed{
-	transition: all 1s ease-in-out;
-	transform: rotateY(100deg);
-}
-
-#check_1 ~ .anz-menu-ch .fa-bars{
-	display: block;
-}
-#check_1 ~ .anz-menu-ch .fa-times{
-	display: none;
-}
-#check_1:checked ~ .anz-menu-ch .fa-bars{
-	display: none;
-}
-#check_1:checked ~ .anz-menu-ch .fa-times{
-	display: block;
-}
-
-
-.anz-menu-ch{
-	color: #fff; 
-	outline:1px solid red;
-	width: 20px;
-	height: 20px;  
-	cursor: pointer; 
-	position: absolute;
-	right: 20px;
-	top: 25px;
-	font-size: 30px;
-	z-index: 3;
-	display: block;
-}
-.anz-perspective{
-	position: fixed;
-	width: 250px;
+	border-radius:10px;
+	width: 228px;
 	height: 100%;
+	padding: 30px;
+	line-height: 40px;
+	background: rgba(#2B66AA, 0.9);
+	text-align: left;
+}
+.anz-menu-ch{
+	display: inline-block;
+	width: 41px;
+	height: 43px;
+	font-size: 30px;
+	position: fixed;
 	top: 0px;
-        //background: red;
-        //background: #009FE3;
-    }
-    .menu-list-pressed {
-    	width: 250px;
-    	height: 100%;
-    	top: 0px;
-    	z-index: 1000;
-    	color: #fff;
-    	background: white;
-    	background: #009FE3;
-    }
-    .ab-main-menu{
-    	li{
-    		display: block;
-            //height: 55px;
-            //line-height: 55px;
-            a{
-            	display: block;
-               //color: $accent;
-                //line-height: 25px;
-            }
-            a:hover{
-            	animation: none !important;
-            	color: #fff;
+	left:0px;
+	z-index: 9999;
+}
+.anz-menu-ch:hover{
+	opacity: 0.3;
+}
+.main-menu{
+	text-align: left;
+	position:relative;
+}
+.dd-logo{
+	position:absolute;
+	left: 104px;
+	top:9px;
+}
+.anz-menu-ch1{
+	display: inline-block;
+	width: 41px;
+	height: 43px;
+	font-size: 30px;
+	position: fixed;
+	top: 0px;
+	right:-8px;
+    // opacity: 0.4;
+    cursor: pointer;
+}
+.anz-menu-ch1:hover{
+	opacity: 0.8;
+}
 
-            }
-            a:hover:before, a:hover:after{
-            	content: "";
-            	animation: none;
-            }
-        }
-        li:hover{
+/* Стили при фиксации меню
+=============================*/
 
-        }
-        .active{
-        	background: #6DB756;
-        }
-    }
+.header-no-fixed{
+	display:none;
+	position:none;
+}
+.header-fixed{
+	position:fixed;
+	top:0;
+	z-index:999;
+	background: rgba(#2B66AA, 0.9);
+	width:100%;
+}
 
-    @media only screen and (min-width : 320px) {
-    }
+@media only screen and (min-width : 320px) {
+}
 
-    @media only screen and (min-width : 480px) {
-    }
+@media only screen and (min-width : 480px) {
+}
 
-    @media only screen and (min-width : 768px) {
-    }
+@media only screen and (min-width : 768px) {
+}
 
-    @media only screen and (min-width : 992px) {
-    }
+@media only screen and (min-width : 992px) {
+}
 
-    @media only screen and (min-width : 1248px) {
-    }
+@media only screen and (min-width : 1248px) {
+}
 
-    .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     //outline: 5px solid red;
 }
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
