--- a/css/fonts.css
+++ b/css/fonts.css
@@ -39,3 +39,10 @@
   src: local("☺"), url("../fonts/lato-medium/Lato-Medium.woff") format("woff"), url("../fonts/lato-medium/Lato-Medium.ttf") format("truetype"), url("../fonts/lato-medium/Lato-Medium.svg") format("svg");
   font-weight: normal;
   font-style: normal; }
+
+    @font-face {
+  font-family: "MyriadPro-Regular";
+  src: url("../fonts/MyriadPro-Regular/MyriadPro-Regular.eot");
+  src: local("☺"), url("../fonts/MyriadPro-Regular/MyriadPro-Regular.woff") format("woff"), url("../fonts/MyriadPro-Regular/MyriadPro-Regular.ttf") format("truetype"), url("../fonts/MyriadPro-Regular/MyriadPro-Regular.svg") format("svg");
+  font-weight: normal;
+  font-style: normal; }
