--- a/css/style5.scss
+++ b/css/style5.scss
@@ -48,15 +48,18 @@
 				// padding: 15px 0;
 				width: 100%;
 				height: 115px;
+				padding-top: 5px;
 				z-index: 100;
 				display: table;
 				span{
 					display: table-cell;
 					vertical-align: middle;
+					line-height: 26px;
 				}								
-			}
+			}			
 						
 		}
+		.df-img-box>div:nth-child(1){padding-top: 12px;}
 		.df-link{
 			color:#383838;
 			font-family: "MuseoSansCyrl1";
@@ -94,23 +97,27 @@
 		    height: 100%;
 		    transition:all 0.7s;
 		    -moz-transition:all 0.7s;
-		     transition-delay: 0.2s;
-			 -moz-transition-delay: 0.2s;	
+		    transition-delay: 0.2s;
+			-moz-transition-delay: 0.2s;
+			background-color: #0994fb;
+			opacity: 0.8;	
 		}
 		
 	}
 }
 
 /*=========two====*/
-.df-two00{
-	margin: 80px 0;
-	display: table;
+.df-two00{	
+	margin: 0 auto;
+	padding: 15px 0;
+	display: block;
+	text-align: center;	
 	div{
 		width: 302px;
-		height: 183px;	
+		height: 183px;
 		color:#fff;
 		display: inline-block;
-		margin-right: 135px;
+		margin-bottom: 15px;
 		padding-top:30px;
 		text-align: center;	
 		vertical-align: middle;
@@ -118,15 +125,15 @@
 		background-image: url("../img/df-bg-two.png");
 		background-position: center center;
 		background-repeat: no-repeat;		
-			.df-t1{
+		.df-t1{
 			font-size: 82px;
-			line-height: 69px;
+			line-height: 68px;
 			display: block;
 			font-family: "lato-heavy";
 		}
 		.df-t2{
 			font-size: 49px;
-			line-height: 29px;
+			line-height: 25px;
 			display: block;
 			 font-family: "MuseoSansCyrl300";
 
@@ -136,17 +143,24 @@
 			line-height: 47px;
 			display: block;
 			font-family: "lato-medium";
+			letter-spacing: 0.2px;
 		}
 	}
-	div:last-child{
-		margin-right: 0;
-	}
+	
 }
 
 @media only screen and (min-width : 320px) {
 }
 
 @media only screen and (min-width : 480px) {
+	/*========two====*/
+	.df-two00{
+		padding: 25px 0;
+		div{		
+			margin-right: 10px;
+			margin-bottom: 15px;
+		}
+	}
 }
 
 @media only screen and (min-width : 768px) {
@@ -159,19 +173,30 @@
 @media only screen and (min-width : 1248px) {
 		.df-napravlenia{	
 		h3{		
-			margin: 40px 0 60px 0;	
+			margin: 0px 14px 51px 0;	
 		}
 		.df-img{		
-			margin:0 15px 20px 0;			
+			margin:0 15px 17px 0;			
 		}
 		.df-mr0{
 			margin-right: 0px;
 		}	
 		.df-margin{
-			margin:  0 70px 0 70px;
+			margin:  0 75px 0 61px;
 		}
-		
 	}
+
+		/*========two====*/
+		.df-two00{
+			padding: 80px 0;
+			div{		
+				margin-right: 125px;
+				margin-bottom: 0px;
+			}
+			div:last-child{
+				margin-right: 0;
+			}
+		}
 }
 
 .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
