--- a/css/style3.scss
+++ b/css/style3.scss
@@ -123,6 +123,10 @@
 
     #dc-my_small_table {
     	display: none;
+    	color: #383838;
+        font-family: MuseoSansCyrl;
+        font-size: 14px;
+        line-height: 16px;
     }
 
     td, th {
