--- a/css/style5.scss
+++ b/css/style5.scss
@@ -59,16 +59,14 @@
 			}			
 						
 		}
-		.df-img-box>div:nth-child(1){padding-top: 12px;}
+		div.df-img-box>div:nth-child(1){padding-top: 12px;}
 		.df-link{
 			color:#383838;
-			font-family: "MuseoSansCyrl1";
-			font-weight: 500;
+			font-family: "MuseoSansCyrl500";			
 			font-size: 14px;
-			background: #fde841;
-			text-transform: uppercase;
-			padding: 5px 3px;
-			width: 203px;
+			background: #fde841;			
+			padding: 10px 0px;
+			width: 201px;
 			display:none;
 			border-radius: 10px;		
 			position: absolute;
@@ -92,7 +90,9 @@
 		}
 	}	
 	.df-img:hover{
-			
+		-webkit-box-shadow: 0px 0px 15px 1px rgba(73,213,252,0.74);
+		-moz-box-shadow: 0px 0px 15px 1px rgba(73,213,252,0.74);
+		box-shadow: 0px 0px 15px 1px rgba(73,213,252,0.74);
 		.df-text{		
 		    height: 100%;
 		    transition:all 0.7s;
@@ -100,7 +100,7 @@
 		    transition-delay: 0.2s;
 			-moz-transition-delay: 0.2s;
 			background-color: #0994fb;
-			opacity: 0.8;	
+			opacity: 0.92;
 		}
 		
 	}
@@ -173,10 +173,10 @@
 @media only screen and (min-width : 1248px) {
 		.df-napravlenia{	
 		h3{		
-			margin: 0px 14px 51px 0;	
+			margin: 0px 2px 51px 0;	
 		}
 		.df-img{		
-			margin:0 15px 17px 0;			
+			margin:0 13px 17px 0;			
 		}
 		.df-mr0{
 			margin-right: 0px;
