--- a/css/style3.scss
+++ b/css/style3.scss
@@ -40,6 +40,20 @@
     line-height: 16px;    
 }
 
+.dc-price {
+	margin-top: 50px;
+    width: 685px;
+
+	color: #383838;
+	font-family: Lato;
+	font-weight: 800;
+	text-transform: uppercase;
+
+	font-size: 34px;
+    font-weight: 800;
+    line-height: 16px;    
+}
+
 
 .dc-address {
 	width: 685px;
