--- a/css/style4.scss
+++ b/css/style4.scss
@@ -5,16 +5,14 @@
 @import "style4.css";
 @import "fonts.css";
 
-/* Меню для декстопа
+/* Шапка и меню для декстопа
 =============================*/
-
-
 
 .dd-header-wrap{
 	width: 100%;
 	background:url(../img/headbg.jpg) no-repeat top center;
 	background-size:cover;
-	height: 300px; 
+	// height: 300px; 
 	.dd-menu-wrap{
 		background: rgba(#fff, 0.1);
 		.dd-menu-container{
@@ -49,10 +47,12 @@
 					a:hover{
 						background: rgba(#fff, 0.2);
 						color:#FDE841;
+						text-decoration: none;
 					}
 					a:active{
 						background: rgba(#fff, 0.35);
 						color:#FFCC00;
+						text-decoration: none;
 					}
 				}
 				li:nth-child(2){
@@ -104,6 +104,74 @@
 			}
 		}
 	}
+	.dd-header-content{
+		max-width: 268px;
+		margin: 0 auto;
+		padding-top: 14px;
+		.dd-title{
+			span{
+				font-family: "lato-medium";
+				color:#fff;
+				font-size: 18px;
+				font-weight: 800;
+				span{
+					display: inline-block;
+					width: 74px;
+					background: url(../img/yellow.png) no-repeat center;
+					font-weight: 900;
+					color:#353535;
+				}
+			}
+		}
+		.dd-slogan{
+			text-align: center;
+			span{
+				font-family: "MuseoSansCyrl1";
+				color:#fff;
+				font-size: 11px;
+			}
+		}
+		.dd-spisok{
+			padding-left: 18px;
+			padding-top: 48px;
+			outline: 1px solid red;
+			ul{
+				li{
+					position:relative;
+					color:#fff;
+					font-family: "MuseoSansCyrl300";
+					font-size: 12px;
+					// padding-left:37px;
+					span{
+						padding-left: 15px;
+					}
+				}
+				li:before{
+					position:absolute;
+					content: "";
+					background:  url(../img/galka.png) no-repeat center;
+					width: 10px;
+					height: 9px;
+					top:3px;
+				}
+			}
+			a{
+				display: inline-block;
+				background-color: #fde841;
+				border-radius: 13px;
+				padding: 7px 26px;
+				text-transform: uppercase;
+				font-family: "MuseoSansCyrl1";
+				font-size: 14px;
+				color: #383838;
+				// margin-left: 34px;
+				margin-bottom: 43px;
+			}
+			a:hover{
+				text-decoration: none;
+			}
+		}
+	}
 }
 
 /* Мобильное меню
@@ -151,7 +219,7 @@
 	.dd-mainmenu{
 		li{
 			a{
-				text-transform: uppercase;
+				// text-transform: uppercase;
 				font-family: "MuseoSansCyrl1";
 				font-size: 16px;
 				color:#fff;
@@ -185,11 +253,7 @@
 	text-align: left;
 	position:relative;
 }
-.dd-logo{
-	position:absolute;
-	left: 104px;
-	top:9px;
-}
+
 .anz-menu-ch1{
 	display: inline-block;
 	width: 41px;
@@ -203,6 +267,72 @@
 }
 .anz-menu-ch1:hover{
 	opacity: 0.8;
+}
+
+/* Элементы мобильной версии
+=============================*/
+
+.dd-logo{
+	position:absolute;
+	left: 104px;
+	top:9px;
+}
+.dd-fhone{
+	font-family: "MuseoSansCyrl500";
+	font-size: 14px;
+	line-height: 9px;
+	color:#fff;
+	display:none;
+	padding-right: 20px;
+	padding-top: 19px;
+}
+
+/* Элементы для планшетов
+=============================*/
+
+.dd-logo-2{
+	display:none;
+	float:left;
+}
+.dd-txt-pl{
+	text-align:center;
+	float:left;
+	padding-top: 7px;
+	padding-left: 16px;
+	display:none;
+	span{
+		font-family: "MuseoSansCyrl300";
+		font-size: 14px;
+		color:#fff;
+		line-height: 28px;
+	}
+}
+
+.dd-fhone2{
+	display:none;
+	padding-top: 3px;
+	padding-right: 15px;
+	float:right;
+	span{
+		font-family: "MuseoSansCyrl500";
+		font-size: 18px;
+		color:#fff;
+	}
+	a{
+		display: inline-block;
+		border: 1px solid #fde841;
+		border-radius: 7px;
+		padding: 5px 20px;
+		font-size: 14px;
+		color: #fde841;
+		transition: all 0.7s;
+		-moz-transition: all 0.7s;
+	}
+	a:hover{
+		color:black;
+		background: #fde841;
+		text-decoration: none;
+	}
 }
 
 /* Стили при фиксации меню
@@ -221,15 +351,45 @@
 }
 
 @media only screen and (min-width : 320px) {
+
 }
 
 @media only screen and (min-width : 480px) {
+
+	.dd-fhone{
+		display:block;
+	}
 }
 
 @media only screen and (min-width : 768px) {
+
+	.anz-menu-ch{
+		top:10px;
+	}
+	.anz-menu{
+		height: 70px;	
+	}
+	.dd-fhone{
+		display:none;
+	}
+	.dd-logo{
+		display: none;
+	}
+	.dd-logo-2{
+		display:block;
+		padding-left: 82px;
+		padding-top: 12px;
+	}
+	.dd-txt-pl{
+		display: block;
+	}
+	.dd-fhone2{
+		display:block;
+	}
 }
 
 @media only screen and (min-width : 992px) {
+
 }
 
 @media only screen and (min-width : 1248px) {
