--- a/css/style3.scss
+++ b/css/style3.scss
@@ -183,6 +183,11 @@
 		font-variant: small-caps;
 	}
 
+	#dc-price-tables {
+		background-image: url("../img/dc-table-background.jpg");
+        background-repeat: no-repeat;
+	}
+
 @media only screen and (min-width : 320px) {
 }
 
@@ -251,6 +256,18 @@
         margin: 0 auto;
         max-width: 1170px;
         table-layout: fixed;
+    }
+
+    #dc-price-tables {
+        margin: 0 auto;
+        max-width: 1170px; 
+        h4 {
+            font-family: Lato;
+			font-size: 32px;
+			font-weight: 800;
+			line-height: 26px;
+			font-variant: small-caps;
+        }   	
     }
 
     td, th {
