--- a/css/style5.scss
+++ b/css/style5.scss
@@ -136,7 +136,6 @@
 			line-height: 25px;
 			display: block;
 			 font-family: "MuseoSansCyrl300";
-
 		}
 		.df-t3{
 			font-size: 21px;
@@ -145,8 +144,178 @@
 			font-family: "lato-medium";
 			letter-spacing: 0.2px;
 		}
+	}	
+}
+
+
+/*====our-dating=======*/
+
+
+.df-dating{
+	padding: 65px 0;
+	h3{
+		font-size: 34px;
+		color:#383838;
+		line-height: 26px;
+		text-transform: uppercase;
+		font-family: "lato-heavy";
+		margin: 55px 0;	
+		text-align: center;
 	}
-	
+	.df-left-box{
+		float: left;
+		max-width: 620px;
+		width: 100%;
+		outline: 1px solid red;
+		margin: 0 auto;
+		text-align: center;
+		.df-img2{			
+			margin: 0 auto;
+			width: 620px;
+			height: 570px;
+			text-align: center;
+			overflow: hidden;
+			img{
+				width: 100%;
+				height: auto;
+			} 			
+		}
+		.df-img-little{	
+		margin-top: 2px;			
+			div{
+				display: inline-block;
+				width: 75px;
+				height: 75px;
+				margin-right: -3px;
+				position: relative;
+                z-index: 9;  
+				img{
+					width: 100%;
+					height: 100%;
+				}
+			}
+			div a:hover:before{
+                content:"";
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                left:0;
+                top:0;
+                background: rgba(#000,0.7);
+                z-index: 10;
+            }  
+            div a:hover:after{
+                content:"";
+                position: absolute;
+                width: 30px;
+                height: 30px;
+                left:50%;
+                top:50%;
+                background: url("../img/df-plus.png") no-repeat left center;
+                z-index: 11;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
+		}
+	}
+	.df-right-box{
+		float: right;
+		outline: 1px solid red;
+		max-width: 555px;
+		width: 100%;
+		.df-span{
+			font-family: "MuseoSansCyrl300";
+			color:#fff;
+			font-size: 28px;
+			line-height: 34px;
+			padding: 15px 10px;
+			text-align: center;
+			display: block;
+			background-image: url("../img/df-bg-span.png");
+			background-position: center center;
+			background-repeat: no-repeat;
+			span{
+				font-family: "MuseoSansCyrl500";
+				display: block;
+			}
+		}
+		.df-ulli{
+			display: inline-block;
+			padding-left: 20px;
+			li{
+				display: block;
+				font-family: "MuseoSansCyrl300";
+				background-image: url("../img/df-bg-li.png");
+				background-position: left top 7px;
+				background-repeat: no-repeat;
+				padding-left: 30px;				
+				font-size: 22px;
+				line-height: 35px;
+				margin-bottom: 15px;
+			}
+		}
+		.df-show-all{
+			display: block;
+			text-align: left;
+			font-size: 22px;
+			color:#24a0fb;
+			font-family: "MuseoSansCyrl300";
+			padding-left: 47px;
+		}
+	}
+	.df-left-float{
+		float: left;
+		display: block;
+		max-width: 620px;
+		width: 100%;
+		margin: 0 auto;
+		text-align: center;
+		outline: 1px solid green;
+
+		h4{
+			font-size: 28px;
+			color:#383838;
+			line-height: 25px;
+			font-family: "MuseoSansCyrl500";	
+		}
+		span{
+			font-size: 20px;
+			color:#383838;
+			line-height: 28px;
+			display: block;
+			font-family: "MuseoSansCyrl300";	
+			em{
+				color:#4c4c4c;
+			}
+			b{
+				font-family: "MuseoSansCyrl500";	
+			}
+		}
+		.df-price{
+			display: block;
+			span{
+				color:#fff;
+				text-transform: uppercase;
+				background-image: url("../img/df-bg-span-sm.png");
+				background-position: center center;
+				background-repeat: no-repeat;
+				padding: 10px 10px;
+				display: inline-block;
+			}
+		}
+		a{
+			font-size: 18px;
+			line-height: 42px;
+			color:#383838;
+			font-family: "MuseoSansCyrl500";
+			background: #fde841;
+			width: 275px;
+			padding: 5px 0;
+			display: inline-block;
+			border-radius: 11px;
+			margin-top: 15px;
+		}
+	}
 }
 
 @media only screen and (min-width : 320px) {
