--- a/css/style3.scss
+++ b/css/style3.scss
@@ -188,6 +188,10 @@
         background-repeat: no-repeat;
 	}
 
+	.borderless td, .borderless th {
+        border: none;
+    }
+
 @media only screen and (min-width : 320px) {
 }
 
