--- a/css/style5.scss
+++ b/css/style5.scss
@@ -90,6 +90,10 @@
 		}
 	}	
 	.df-img:hover{
+		 transition:all 0.3s;
+		 -moz-transition:all 0.3s;
+		 transition-delay: 0.5s;
+		-moz-transition-delay: 0.5s;		
 		-webkit-box-shadow: 0px 0px 15px 1px rgba(73,213,252,0.74);
 		-moz-box-shadow: 0px 0px 15px 1px rgba(73,213,252,0.74);
 		box-shadow: 0px 0px 15px 1px rgba(73,213,252,0.74);
@@ -149,8 +153,6 @@
 
 
 /*====our-dating=======*/
-
-
 .df-dating{
 	padding: 65px 0;
 	h3{
@@ -163,7 +165,7 @@
 		text-align: center;
 	}
 	.df-left-box{
-		float: left;
+		// float: left;
 		max-width: 620px;
 		width: 100%;
 		outline: 1px solid red;
@@ -171,8 +173,8 @@
 		text-align: center;
 		.df-img2{			
 			margin: 0 auto;
-			width: 620px;
-			height: 570px;
+			// width: 620px;
+			// height: 570px;
 			text-align: center;
 			overflow: hidden;
 			img{
@@ -181,7 +183,8 @@
 			} 			
 		}
 		.df-img-little{	
-		margin-top: 2px;			
+			margin-top: 2px;
+			display: none;			
 			div{
 				display: inline-block;
 				width: 75px;
@@ -219,21 +222,25 @@
 		}
 	}
 	.df-right-box{
-		float: right;
+		// float: right;
 		outline: 1px solid red;
 		max-width: 555px;
 		width: 100%;
+		text-align: left;
+		margin: 0 auto;
 		.df-span{
 			font-family: "MuseoSansCyrl300";
 			color:#fff;
 			font-size: 28px;
 			line-height: 34px;
-			padding: 15px 10px;
+			padding: 14px 0px;
 			text-align: center;
 			display: block;
 			background-image: url("../img/df-bg-span.png");
 			background-position: center center;
 			background-repeat: no-repeat;
+			background-size: cover;
+			margin-top: 10px;
 			span{
 				font-family: "MuseoSansCyrl500";
 				display: block;
@@ -264,14 +271,13 @@
 		}
 	}
 	.df-left-float{
-		float: left;
+		// float: left;
 		display: block;
 		max-width: 620px;
 		width: 100%;
 		margin: 0 auto;
 		text-align: center;
 		outline: 1px solid green;
-
 		h4{
 			font-size: 28px;
 			color:#383838;
@@ -333,12 +339,95 @@
 }
 
 @media only screen and (min-width : 768px) {
+			/*====our-dating=======*/
+.df-dating{
+	padding: 65px 0;
+	h3{	
+		margin: 55px 0;			
+	}
+	.df-left-box{
+		float: left;
+		max-width: 460px;
+		width: 100%;		
+		.df-img2{			
+			// width: 620px;
+			// height: 570px;						
+		}
+		
+	}
+	.df-right-box{
+		float:right;		
+		// max-width: 415px;
+		// width: 100%;	
+		// max-width: unset;
+
+		width: 415px;	
+		.df-span{			
+			padding: 15px 10px;			
+		}
+		.df-ulli{			
+			padding-left: 20px;			
+		}		
+	}
+	.df-left-float{
+		float: left;
+		display: block;
+		max-width: 460px;
+		width: 100%;
+		margin: 0 auto;
+		text-align: center;		
+	}
+}
+
 }
 
 @media only screen and (min-width : 992px) {
 
-}
 
+
+}
+@media only screen and (min-width : 1070px) {
+			/*====our-dating=======*/
+.df-dating{
+	padding: 65px 0;
+	h3{	
+		margin: 55px 0;			
+	}
+	.df-left-box{
+		float: left;
+		max-width: 620px;
+		width: 100%;		
+		.df-img2{			
+			width: 620px;
+			height: 570px;						
+		}
+		.df-img-little{	
+			margin-top: 2px;
+			display: block;           
+		}
+	}
+	.df-right-box{
+		float: right;		
+		max-width: 555px;
+		width: 100%;
+		
+		.df-span{			
+			padding: 15px 10px;			
+		}
+		.df-ulli{			
+			padding-left: 20px;			
+		}		
+	}
+	.df-left-float{
+		float: left;
+		display: block;
+		max-width: 620px;
+		width: 100%;
+		margin: 0 auto;
+		text-align: center;		
+	}
+}
+}
 @media only screen and (min-width : 1248px) {
 		.df-napravlenia{	
 		h3{		
@@ -366,6 +455,12 @@
 				margin-right: 0;
 			}
 		}
+
+
+
+
+
+
 }
 
 .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
