--- a/css/style4.scss
+++ b/css/style4.scss
@@ -38,7 +38,7 @@ a:hover{
 						-moz-transition: all 0.7s;
 						// outline: 1px solid red;
 					}
-					a:before{
+					.dd-borders:before{
 						background: url(../img/border.jpg) no-repeat;
 						position:absolute;
 						content:"";
@@ -47,10 +47,14 @@ a:hover{
 						left: 0;
 						top: 0;
 					}
+
 					a:hover{
 						background: rgba(#fff, 0.2);
 						color:#FDE841;
 						text-decoration: none;
+					}
+					a:hover:before{
+						background: none;
 					}
 					a:active{
 						background: rgba(#fff, 0.35);
@@ -493,6 +497,9 @@ a:hover{
 	
 	.dd-header-wrap{
 		height: 860px;
+		.dd-menu-wrap{
+			height: 65px;
+		}
 		.dd-header-bottom{
 			display: block;
 
