--- a/css/style3.scss
+++ b/css/style3.scss
@@ -159,7 +159,7 @@
 		margin: 0 auto;
 		font-family: "lato-heavy";
 		h3{
-			font-size: 34px;
+			font-size: 24px;
 			color:#383838;
 			text-transform: uppercase;
 			text-align: center;	
@@ -167,6 +167,52 @@
 			font-family: "lato-heavy";
 		}
 	}
+
+    .dc-table_header2 {
+    	font-family: MuseoSansCyrl;
+        font-size: 10px;
+        line-height: 26px;
+        font-variant: small-caps;
+    }
+
+    .dc-table_text {
+	    font-family: Lato;
+	    font-size: 10px;
+		font-weight: 800;
+		line-height: 26px;
+		font-variant: small-caps;
+	}
+
+	#dc-price-tables {
+		background-image: url("../img/dc-table-background.jpg");
+        background-repeat: no-repeat;
+	}
+
+	.borderless td, .borderless th {
+        border: none;
+    }
+
+@media only screen and (min-width : 320px) {
+}
+
+@media only screen and (min-width : 480px) {
+}
+
+@media only screen and (min-width : 768px) {
+
+	.dc-schedule {
+		text-align: center;
+		margin: 0 auto;
+		font-family: "lato-heavy";
+		h3{
+			font-size: 34px;
+			color:#383838;
+			text-transform: uppercase;
+			text-align: center;	
+			margin: 25px 0 25px 0;	
+			font-family: "lato-heavy";
+		}
+    }    
 
     .dc-table_header2 {
     	font-family: MuseoSansCyrl;
@@ -191,14 +237,6 @@
 	.borderless td, .borderless th {
         border: none;
     }
-
-@media only screen and (min-width : 320px) {
-}
-
-@media only screen and (min-width : 480px) {
-}
-
-@media only screen and (min-width : 768px) {
 }
 
 @media only screen and (min-width : 992px) {
@@ -282,6 +320,44 @@
     	max-width: 1170px;
     	margin: 0 auto;
 	    height: 557px;
+    }
+
+    	.dc-schedule {
+		text-align: center;
+		margin: 0 auto;
+		font-family: "lato-heavy";
+		h3{
+			font-size: 34px;
+			color:#383838;
+			text-transform: uppercase;
+			text-align: center;	
+			margin: 25px 0 25px 0;	
+			font-family: "lato-heavy";
+		}
+	}
+
+    .dc-table_header2 {
+    	font-family: MuseoSansCyrl;
+        font-size: 24px;
+        line-height: 26px;
+        font-variant: small-caps;
+    }
+
+    .dc-table_text {
+	    font-family: Lato;
+	    font-size: 24px;
+		font-weight: 800;
+		line-height: 26px;
+		font-variant: small-caps;
+	}
+
+	#dc-price-tables {
+		background-image: url("../img/dc-table-background.jpg");
+        background-repeat: no-repeat;
+	}
+
+	.borderless td, .borderless th {
+        border: none;
     }
 }
 
