--- a/css/style3.scss
+++ b/css/style3.scss
@@ -186,6 +186,8 @@
 	#dc-price-tables {
 		background-image: url("../img/dc-table-background.jpg");
         background-repeat: no-repeat;
+        padding-left: 2%;
+        padding-right: 2%;        
 	}
 
 	.borderless td, .borderless th {
@@ -232,6 +234,8 @@
 	#dc-price-tables {
 		background-image: url("../img/dc-table-background.jpg");
         background-repeat: no-repeat;
+        padding-left: 2%;
+        padding-right: 2%;
 	}
 
 	.borderless td, .borderless th {
@@ -303,6 +307,8 @@
     #dc-price-tables {
         margin: 0 auto;
         max-width: 1170px; 
+        padding-left: 2%;
+        padding-right: 2%;        
         h4 {
             font-family: Lato;
 			font-size: 32px;
