--- a/css/style3.scss
+++ b/css/style3.scss
@@ -163,7 +163,7 @@
 			color:#383838;
 			text-transform: uppercase;
 			text-align: center;	
-			margin: 25px 0 25px 0;	
+			margin: 225px 0 25px 0;	
 			font-family: "lato-heavy";
 		}
 	}
@@ -197,7 +197,7 @@
     .dc-want_to_you {
 		background-image: url("../img/want_to_you.jpg");
         background-size: auto;
-        min-height: 691px;
+        height: 621px;
         margin: 0 auto;
         width: 100%;
     }
@@ -250,25 +250,12 @@
 		line-height: 41px;
     }
 
-@media only screen and (min-width : 320px) {
-    .dc-want_to_you {
-		background-image: url("../img/want_to_you.jpg");
-        background-size: auto;
-        margin: 0 auto;
-        max-height: 330px;
-        width: 100%;
-    }
 
+@media only screen and (min-width : 320px) {
 }
 
 @media only screen and (min-width : 480px) {
-    .dc-want_to_you {
-		background-image: url("../img/want_to_you.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        max-height: 330px;
-        width: 100%;
-    }
+
 }
 
 @media only screen and (min-width : 768px) {
@@ -440,7 +427,7 @@
     .dc-want_to_you {
 		background-image: url("../img/want_to_you.jpg");
         background-repeat: no-repeat;
-        max-height: 291px;
+        height: 291px;
         width: 100%;
         background-size: cover;
     }
