--- a/css/style3.scss
+++ b/css/style3.scss
@@ -208,6 +208,7 @@
         height: 721px;
         margin: 0 auto;
         width: 100%;
+        padding-bottom: 100px;
     }
 
     .dc-want {
@@ -257,7 +258,6 @@
 		font-size: 16px;
 		line-height: 41px;
     }
-
 
 @media only screen and (min-width : 320px) {
 }
@@ -322,6 +322,7 @@
         height: 421px;
         margin: 0 auto;
         width: 100%;
+        padding-bottom: 100px;
     }
 }
 
@@ -462,6 +463,7 @@
         height: 291px;
         width: 100%;
         background-size: cover;
+        padding-bottom: 100px;
     }
 }
 
