--- a/css/style4.scss
+++ b/css/style4.scss
@@ -5,6 +5,8 @@
 @import "style4.css";
 @import "fonts.css";
 
+
+
 a:hover{
 	text-decoration:none !important;
 }
@@ -498,7 +500,7 @@ a:hover{
 	.dd-header-wrap{
 		height: 860px;
 		.dd-menu-wrap{
-			height: 65px;
+			// height: 65px;
 		}
 		.dd-header-bottom{
 			display: block;
